Add --print-native-access option